tests/PhiCore/compile_failure/src/Container/StringView.assign_nullptr.fail.cpp
#include <Phi/Container/StringView.hpp>

int main()
{
    phi::StringView view;

    view = nullptr;
}
